--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Temperature Data</title>
 	<script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
 	<script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
-	<script src="barChart.js"></script>-->
+	<script src="https://github.com/wxchoong/wxchoong.github.io/blob/master/barChart.js"></script>-->
 </head>
 
 <body style='margin : 0px; overflow: hidden;'>
