--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Temperature Data</title>
 	<script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
 	<script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
-	<script type="text/javascript" src="barChart.js"></script>
+	<script type="text/javascript" src="draft.js"></script>
 </head>
 
 <body style='margin : 0px; overflow: hidden;'>
@@ -13,10 +13,7 @@
 	<a-scene embedded arjs='sourceType: webcam;', d3js>
 		<a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
-
+	
 </body>
 
 </html>
-
-<!--<a-marker type='pattern' patternUrl='C:\Users\stuchoongwx\Downloads\AR.js-master\ARTC.patt'></a-marker>
-<a-marker-camera type='pattern' patternUrl='C:\Users\stuchoongwx\Downloads\AR.js-master\ARTC.patt'></a-marker-camera>-->
