--- a/index.html
+++ b/index.html
@@ -2,17 +2,23 @@
 <html>
 
 <head>
-	<title>Temperature Data</title>
-	<script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
-	<script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
-	<script type="text/javascript" src="barChart.js"></script>
+	<title>Welcome</title>
 </head>
 
-<body style='margin : 0px; overflow: hidden;'>
-
-	<a-scene embedded arjs='sourceType: webcam;', d3js>
-		<a-marker-camera preset='hiro'></a-marker-camera>
-	</a-scene>
+<body>
+	<div class="header" style="background:pink; text-align:center; height:45px">
+		<h1> Machine </h1>	
+	</div>
+	
+	<div class="description" style="text-align:center; margin-top:0px">
+		<h4> This machine is used for testing. </h4><br>
+		<h4 style="color:grey"> Select Data: </h4>
+		<p> Choose the data type that you want to monitor. </p>
+	</div><br>
+	
+	<div class="wrapper" style="text-align:center">
+		<button onclick="window.location = 'home.html';" style="background:pink; position:center"> GET DATA </button>
+	</div>
 	
 </body>
 
