--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</div><br>
 	
 	<div class="wrapper" style="text-align:center">
-		<button onclick="window.location = 'home.html';" style="background:pink; position:center"> GET DATA </button>
+		<button onclick="window.location = 'https://github.com/wxchoong/wxchoong.github.io/blob/master/home.html';" style="background:pink; position:center"> GET DATA </button>
 	</div>
 	
 </body>
